--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 ../terraform/.*
 terraform/*.tfstate*
 .credentials/
+# Default .gitignore content added by dbt Cloud
+target/
+dbt_packages/
+logs/
+# end dbt Cloud content
